# intel4004-asm

./: .gitignore  CMakeLists.txt  README.md
examples/: example.asm  loop.asm  store.asm  sub_num.asm
src/: codegen.cpp  codegen.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  tokens.cpp  tokens.h
tests/codegen/: CMakeLists.txt  instr_test.cpp
tests/lexer/: CMakeLists.txt  ident_test.cpp  label_test.cpp
tests/parser/: CMakeLists.txt  arg_test.cpp  instr_test.cpp  label_test.cpp
